2004-07-13  Dan Winship  <danw@novell.com>

	* libsoup/soup-session.c (connect_result): If the connection
	attempt succeeded, reserve the connection before releasing
	host_lock. Otherwise, another thread might find it in the
	connection pool before the caller can queue a message on it.
	#60693

	* libsoup/soup-session-async.c (got_connection): Call
	soup_connection_release(), since we don't have a specific message
	in mind for the connection, so we need it to be considered idle.

	* libsoup/soup-connection.c (soup_connection_release): New
	function, to undo a soup_connection_reserve().
	(soup_connection_send_request, soup_connection_reserve,
	soup_connection_authenticate, soup_connection_reauthenticate):
	Document these

2004-07-12  Dan Winship  <danw@novell.com>

	* libsoup/soup-session-sync.c (send_message): signal the
	"connections available" condition after the message finishes. Duh.

	* libsoup-2.2.pc.in (Cflags, Libs): add XML_CFLAGS and XML_LIBS

2004-07-08  Dan Winship  <danw@novell.com>

	* libsoup/soup-soap-response.c: Revert previous change for now; it
	breaks the build on distros with older libxmls.

2004-07-08  Dan Winship  <danw@novell.com>

	* tests/dict.c: Basic SOAP test, using Aonaware's SOAP->DICT
	gateway

2004-07-07  Fernando Herrera  <fherrera@onirica.com>

	* libsoup/soup-soap-response.c: (finalize), (init),
	(soup_soap_response_from_string): Use a parse context for the
	xml document, so we can safely use the option to ignore
	blank spaces and '\n'.

2004-07-06  Dan Winship  <danw@novell.com>

	* libsoup/soup-uri.c (soup_uri_new_with_base): if the protocol is
	http or https, require a hostname. For #61049

	* tests/uri-parsing.c (rel_tests, do_uri): Update for that

2004-06-03  JP Rosevear <jpr@novell.com>

	* configure.in: bump version to 2.1.11, libtool number

2004-06-01  Dan Winship  <danw@novell.com>

	* libsoup/soup-address.c: Redo the various IPv4/IPv6-abstracting
	macros to not use ?: expressions as lvalues, since that's